--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
     "cmdk": "^1.0.0",
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -46,6 +48,7 @@
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.6.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.13",
