--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
